documents: fix text-shadow for selection mode toolbar buttons
Using a light shadow with light text makes text appear as if it was
blurry.

Reported in https://bugzilla.gnome.org/show_bug.cgi?id=673321

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -301,9 +301,11 @@ GtkIconView.documents-main-view.check:active {
     border-width: 1px;
 
     color: @theme_base_color;
+}
 
-    text-shadow: none;
-    icon-shadow: none;
+.documents-selection-mode.toolbar .button * {
+    text-shadow: shade(@documents_selection_toolbar_border, 0.90) 0 1;
+    icon-shadow: shade(@documents_selection_toolbar_border, 0.90) 0 1;
 }
 
 .documents-selection-mode.toolbar .button:hover {
